[tool.poetry]
name = "nat20"
version = "0.1.0"
description = "Access Pixels dice with async and bleak"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "nat20"}]

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.2"


[tool.poetry.group.tui.dependencies]
textual = "^0.28.1"
art = "^6.0"


[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = "^0.28.1"}
sphinx = "^6.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
