[tool.poetry]
name = "nat20"
version = "0.0.1"
description = "Access Pixels dice with async and bleak"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/AstraLuma/nat20"
documentation = "https://nat20.readthedocs.io/en/stable/"
packages = [{include = "nat20"}]

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.2"


[tool.poetry.group.tui.dependencies]
textual = ">=0.28.1,<0.31.0"
art = "^6.0"


[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = ">=0.28.1,<0.31.0"}
watchgha = "^2.1.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.2"
# sphinxcontrib-prettyspecialmethods = "^0.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"


[tool.pytest.ini_options]
minversion = "7.4"
testpaths = [
    "tests",
]
required_plugins = "pytest-asyncio pytest-mock"
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
